--- a/lib/package.json
+++ b/lib/package.json
@@ -1,11 +1,11 @@
 {
   "_args": [
     [
-      "jquery-sparkline",
-      "C:\\Users\\scottbatary\\Source\\Repos\\gjallarhorn-mock"
+      "jquery-sparkline@^2.3.2",
+      "C:\\Users\\ryantauriainen\\gjallflow"
     ]
   ],
-  "_from": "jquery-sparkline@latest",
+  "_from": "jquery-sparkline@>=2.3.2 <3.0.0",
   "_id": "jquery-sparkline@2.3.2",
   "_inCache": true,
   "_installable": true,
@@ -23,11 +23,11 @@
   "_phantomChildren": {},
   "_requested": {
     "name": "jquery-sparkline",
-    "raw": "jquery-sparkline",
-    "rawSpec": "",
+    "raw": "jquery-sparkline@^2.3.2",
+    "rawSpec": "^2.3.2",
     "scope": null,
-    "spec": "latest",
-    "type": "tag"
+    "spec": ">=2.3.2 <3.0.0",
+    "type": "range"
   },
   "_requiredBy": [
     "/"
@@ -35,8 +35,8 @@
   "_resolved": "https://registry.npmjs.org/jquery-sparkline/-/jquery-sparkline-2.3.2.tgz",
   "_shasum": "00cb91fee58a4c4651235b70f59f7e903e07b9e7",
   "_shrinkwrap": null,
-  "_spec": "jquery-sparkline",
-  "_where": "C:\\Users\\scottbatary\\Source\\Repos\\gjallarhorn-mock",
+  "_spec": "jquery-sparkline@^2.3.2",
+  "_where": "C:\\Users\\ryantauriainen\\gjallflow",
   "author": {
     "name": "gwatts"
   },
